export all libraries in 00_movie_recommender to allow importing in index

--- a/nbs/00_movie_recommender.ipynb
+++ b/nbs/00_movie_recommender.ipynb
@@ -21,10 +21,10 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3f91d9fa",
+   "id": "e50a6ef4",
    "metadata": {},
    "source": [
-    "# Makes sure all your libraries and packages are installed and loaded."
+    "### Makes sure all your libraries and packages are installed and loaded."
    ]
   },
   {
@@ -107,9 +107,26 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#| export\n",
     "# For modeling\n",
     "from fastai.tabular.all import *\n",
     "from fastai.collab import *\n",
+    "# import torch.nn as nn\n",
+    "#for publishing the model\n",
+    "import gradio as gr"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "364cfb23",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# For modeling\n",
+    "from fastai.tabular.all import *\n",
+    "from fastai.collab import *\n",
+    "# import torch.nn as nn\n",
     "#for publishing the model\n",
     "import gradio as gr"
    ]
@@ -121,13 +138,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#| hide\n",
+    "#| export\n",
     "path = Path('../models_and_dls')"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "16387b7b",
+   "id": "b75de7db",
    "metadata": {},
    "source": [
     "# Load model and data loaders or movie title csv\n"
@@ -192,34 +209,34 @@
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>1</td>\n",
-       "      <td>'burbs, The (1989)</td>\n",
+       "      <td>\"Great Performances\" Cats (1998)</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>2</td>\n",
-       "      <td>(500) Days of Summer (2009)</td>\n",
+       "      <td>#1 Cheerleader Camp (2010)</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>3</td>\n",
-       "      <td>*batteries not included (1987)</td>\n",
+       "      <td>#Horror (2015)</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>4</td>\n",
-       "      <td>...And Justice for All (1979)</td>\n",
+       "      <td>#realityhigh (2017)</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "   midx                           title\n",
-       "0     0                            #na#\n",
-       "1     1              'burbs, The (1989)\n",
-       "2     2     (500) Days of Summer (2009)\n",
-       "3     3  *batteries not included (1987)\n",
-       "4     4   ...And Justice for All (1979)"
+       "   midx                             title\n",
+       "0     0                              #na#\n",
+       "1     1  \"Great Performances\" Cats (1998)\n",
+       "2     2        #1 Cheerleader Camp (2010)\n",
+       "3     3                    #Horror (2015)\n",
+       "4     4               #realityhigh (2017)"
       ]
      },
      "execution_count": null,
@@ -228,14 +245,15 @@
     }
    ],
    "source": [
+    "#| export\n",
     "#load your the model and movie titles with indexes (from the previous data loaders)\n",
-    "learn = load_learner(path/'model_movie_predictor_large9mil_ds_19_062.pkl')\n",
-    "titles = pd.read_csv(path/'movie_9mil_03_df_from_dls.csv'); titles.head()"
+    "learn = load_learner(path/'movie_predictor_large20mil_639.pkl')\n",
+    "titles = pd.read_csv(path/'movie_20mil_dls.csv'); titles.head()"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "75dfb25f",
+   "id": "5f32dfb1",
    "metadata": {},
    "source": [
     "# Functions for Model Inference"
@@ -264,7 +282,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "550c482c",
+   "id": "0c86d081",
    "metadata": {},
    "outputs": [
     {
@@ -272,7 +290,7 @@
       "text/markdown": [
        "---\n",
        "\n",
-       "[source](https://github.com/daveramseymusic/movie-recommender/blob/main/movie_recommender/movie_recommender.py#L7){target=\"_blank\" style=\"float:right; font-size:smaller\"}\n",
+       "[source](https://github.com/daveramseymusic/movie-recommender/blob/main/movie_recommender/movie_recommender.py#L15){target=\"_blank\" style=\"float:right; font-size:smaller\"}\n",
        "\n",
        "### get_movie_recs\n",
        "\n",
@@ -289,7 +307,7 @@
       "text/plain": [
        "---\n",
        "\n",
-       "[source](https://github.com/daveramseymusic/movie-recommender/blob/main/movie_recommender/movie_recommender.py#L7){target=\"_blank\" style=\"float:right; font-size:smaller\"}\n",
+       "[source](https://github.com/daveramseymusic/movie-recommender/blob/main/movie_recommender/movie_recommender.py#L15){target=\"_blank\" style=\"float:right; font-size:smaller\"}\n",
        "\n",
        "### get_movie_recs\n",
        "\n",
@@ -360,7 +378,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1f3f869a",
+   "id": "162ddaf5",
    "metadata": {},
    "source": [
     "# Gradio For Publishing the Model \n",
@@ -385,7 +403,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "51d17bea",
+   "id": "f6e90aa9",
    "metadata": {},
    "source": [
     "# Actually Try the Model HERE\n",
@@ -402,7 +420,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Running on local URL:  http://127.0.0.1:7862\n",
+      "Running on local URL:  http://127.0.0.1:7861\n",
       "\n",
       "To create a public link, set `share=True` in `launch()`.\n"
      ]
@@ -410,7 +428,7 @@
     {
      "data": {
       "text/html": [
-       "<div><iframe src=\"http://127.0.0.1:7862/\" width=\"900\" height=\"500\" allow=\"autoplay; camera; microphone; clipboard-read; clipboard-write;\" frameborder=\"0\" allowfullscreen></iframe></div>"
+       "<div><iframe src=\"http://127.0.0.1:7861/\" width=\"900\" height=\"500\" allow=\"autoplay; camera; microphone; clipboard-read; clipboard-write;\" frameborder=\"0\" allowfullscreen></iframe></div>"
       ],
       "text/plain": [
        "<IPython.core.display.HTML object>"
@@ -422,7 +440,7 @@
     {
      "data": {
       "text/plain": [
-       "(<gradio.routes.App>, 'http://127.0.0.1:7862/', None)"
+       "(<gradio.routes.App>, 'http://127.0.0.1:7861/', None)"
       ]
      },
      "execution_count": null,
@@ -454,35 +472,35 @@
      "data": {
       "text/plain": [
        "['Beasts of the Southern Wild (2012)',\n",
-       " 'Ginger Snaps (2000)',\n",
-       " 'Leaving Las Vegas (1995)',\n",
-       " 'Being John Malkovich (1999)',\n",
-       " 'Little Children (2006)',\n",
-       " 'Ghost World (2001)',\n",
-       " 'Yellow Submarine (1968)',\n",
-       " 'Secret of Roan Inish, The (1994)',\n",
-       " 'Louis C.K.: Live at The Comedy Store (2015)',\n",
-       " 'Neon Genesis Evangelion: The End of Evangelion (Shin seiki Evangelion Gekijô-ban: Air/Magokoro wo, kimi ni) (1997)',\n",
-       " 'Atlantic City (1980)',\n",
-       " 'Z (1969)',\n",
-       " 'Sex, Lies, and Videotape (1989)',\n",
-       " 'Princess and the Warrior, The (Krieger und die Kaiserin, Der) (2000)',\n",
-       " 'Act of Killing, The (2012)',\n",
-       " 'Birdman: Or (The Unexpected Virtue of Ignorance) (2014)',\n",
-       " '24 Hour Party People (2002)',\n",
-       " 'Animal Kingdom (2010)',\n",
-       " 'Breaking the Waves (1996)',\n",
-       " 'Rushmore (1998)',\n",
-       " 'Videodrome (1983)',\n",
-       " 'Last Night (1998)',\n",
-       " 'City of God (Cidade de Deus) (2002)',\n",
-       " 'Nosferatu (Nosferatu, eine Symphonie des Grauens) (1922)',\n",
-       " 'Shining, The (1980)',\n",
-       " 'Underground (1995)',\n",
-       " 'Proposition, The (2005)',\n",
-       " 'Brothers Bloom, The (2008)',\n",
-       " 'Exit Through the Gift Shop (2010)',\n",
-       " 'Lost in Translation (2003)']"
+       " 'Mina Tannenbaum (1994)',\n",
+       " 'Triplets of Belleville, The (Les triplettes de Belleville) (2003)',\n",
+       " 'Chasing Mavericks (2012)',\n",
+       " 'Bye Bye Brazil (Bye Bye Brasil) (1980)',\n",
+       " \"Tale of Winter, A (a.k.a. A Winter's Tale) (Conte d'hiver) (1992)\",\n",
+       " 'Coonskin (1975)',\n",
+       " 'Nanny, The (1965)',\n",
+       " 'Trials of Henry Kissinger, The (2002)',\n",
+       " 'Rain Fall (2009)',\n",
+       " 'Hail, Caesar! (2016)',\n",
+       " 'Freeway (1996)',\n",
+       " 'Phantom Boy (2015)',\n",
+       " 'The Attic (2008)',\n",
+       " 'James and the Giant Peach (1996)',\n",
+       " 'Song of the Sea (2014)',\n",
+       " 'Bitter Tears of Petra von Kant, The (bitteren Tränen der Petra von Kant, Die) (1972)',\n",
+       " 'The Ballad of Buster Scruggs (2018)',\n",
+       " 'Bank Dick, The (1940)',\n",
+       " 'Salvador (1986)',\n",
+       " 'Go-Getter, The (2007)',\n",
+       " 'Raining Stones (1993)',\n",
+       " 'Easy Street (1917)',\n",
+       " 'Scarlet Diva (2000)',\n",
+       " 'Kings of Summer, The (2013)',\n",
+       " 'My Side of the Mountain (1969)',\n",
+       " 'Nashville (1975)',\n",
+       " 'Fantastic Mr. Fox (2009)',\n",
+       " 'After the Rehearsal (Efter repetitionen) (1984)',\n",
+       " 'Touchy Feely (2013)']"
       ]
      },
      "execution_count": null,
@@ -506,14 +524,6 @@
     "#| hide\n",
     "import nbdev; nbdev.nbdev_export()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "2d3328b3",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
