--- a/nbs/index.ipynb
+++ b/nbs/index.ipynb
@@ -6,13 +6,27 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#| hide\n",
-    "from movie_recommender.movie_recommender import *\n",
-    "# For modeling\n",
+    "#|hide\n",
+    "# import torch.nn as nn\n",
+    "\n",
+    "\n",
+    "\n",
+    "# # For modeling\n",
     "from fastai.tabular.all import *\n",
     "from fastai.collab import *\n",
-    "#for publishing the model\n",
-    "import gradio as gr"
+    "\n",
+    "# #for publishing the model\n",
+    "# import gradio as gr"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#| hide\n",
+    "from movie_recommender.movie_recommender import *"
    ]
   },
   {
@@ -151,34 +165,41 @@
     {
      "data": {
       "text/plain": [
-       "torch.nn.modules.distance.CosineSimilarity"
+       "['Beasts of the Southern Wild (2012)',\n",
+       " 'Ginger Snaps (2000)',\n",
+       " 'Leaving Las Vegas (1995)',\n",
+       " 'Being John Malkovich (1999)',\n",
+       " 'Little Children (2006)',\n",
+       " 'Ghost World (2001)',\n",
+       " 'Yellow Submarine (1968)',\n",
+       " 'Secret of Roan Inish, The (1994)',\n",
+       " 'Louis C.K.: Live at The Comedy Store (2015)',\n",
+       " 'Neon Genesis Evangelion: The End of Evangelion (Shin seiki Evangelion Gekijô-ban: Air/Magokoro wo, kimi ni) (1997)',\n",
+       " 'Atlantic City (1980)',\n",
+       " 'Z (1969)',\n",
+       " 'Sex, Lies, and Videotape (1989)',\n",
+       " 'Princess and the Warrior, The (Krieger und die Kaiserin, Der) (2000)',\n",
+       " 'Act of Killing, The (2012)',\n",
+       " 'Birdman: Or (The Unexpected Virtue of Ignorance) (2014)',\n",
+       " '24 Hour Party People (2002)',\n",
+       " 'Animal Kingdom (2010)',\n",
+       " 'Breaking the Waves (1996)',\n",
+       " 'Rushmore (1998)',\n",
+       " 'Videodrome (1983)',\n",
+       " 'Last Night (1998)',\n",
+       " 'City of God (Cidade de Deus) (2002)',\n",
+       " 'Nosferatu (Nosferatu, eine Symphonie des Grauens) (1922)',\n",
+       " 'Shining, The (1980)',\n",
+       " 'Underground (1995)',\n",
+       " 'Proposition, The (2005)',\n",
+       " 'Brothers Bloom, The (2008)',\n",
+       " 'Exit Through the Gift Shop (2010)',\n",
+       " 'Lost in Translation (2003)']"
       ]
      },
      "execution_count": null,
      "metadata": {},
      "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "nn.CosineSimilarity"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'nn' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-6-fd15dbabeb6d>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mget_movie_recs\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mfull_title\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m'Beasts of the Southern Wild (2012)'\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mlearn\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mlearn\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mtitles\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mtitles\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;32m~/Documents/coding/mov_recs_all/movie_recommender1/movie-recommender/movie_recommender/movie_recommender.py\u001b[0m in \u001b[0;36mget_movie_recs\u001b[0;34m(full_title, learn, titles)\u001b[0m\n\u001b[1;32m     12\u001b[0m     \u001b[0mmovie_factors\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mlearn\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mmodel\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mi_weight\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mweight\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     13\u001b[0m     \u001b[0midx\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtitles\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mtitles\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtitle\u001b[0m \u001b[0;34m==\u001b[0m \u001b[0mfull_title\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mmidx\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 14\u001b[0;31m     \u001b[0mdistances\u001b[0m \u001b[0;34m=\u001b[0m  \u001b[0mnn\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mCosineSimilarity\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdim\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmovie_factors\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mmovie_factors\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0midx\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;32mNone\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     15\u001b[0m     \u001b[0midx\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mdistances\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0margsort\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdescending\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mTrue\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     16\u001b[0m     \u001b[0;32mreturn\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0mo\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mo\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mtitles\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtitle\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0midx\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtolist\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;36m30\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'nn' is not defined"
-     ]
     }
    ],
    "source": [
