delete old models and dls

--- a/nbs/00_movie_recommender.ipynb
+++ b/nbs/00_movie_recommender.ipynb
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "071a7a80",
+   "id": "996b76e7",
    "metadata": {},
    "source": [
     "### Makes sure all your libraries and packages are installed and loaded."
@@ -119,7 +119,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "03a7019d",
+   "id": "be5d53f2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -143,7 +143,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b6edf7e1",
+   "id": "b265dd35",
    "metadata": {},
    "source": [
     "# Load model and data loaders or movie title csv\n"
@@ -173,86 +173,17 @@
    "execution_count": null,
    "id": "119a35f0",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>midx</th>\n",
-       "      <th>title</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>0</td>\n",
-       "      <td>#na#</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>1</td>\n",
-       "      <td>\"Great Performances\" Cats (1998)</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>2</td>\n",
-       "      <td>#1 Cheerleader Camp (2010)</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>3</td>\n",
-       "      <td>#Horror (2015)</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>4</td>\n",
-       "      <td>#realityhigh (2017)</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "   midx                             title\n",
-       "0     0                              #na#\n",
-       "1     1  \"Great Performances\" Cats (1998)\n",
-       "2     2        #1 Cheerleader Camp (2010)\n",
-       "3     3                    #Horror (2015)\n",
-       "4     4               #realityhigh (2017)"
-      ]
-     },
-     "execution_count": null,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "#| export\n",
     "#load your the model and movie titles with indexes (from the previous data loaders)\n",
     "learn = load_learner(path/'movie_predictor_large20mil_639.pkl')\n",
-    "titles = pd.read_csv(path/'movie_20mil_dls.csv'); titles.head()"
+    "titles = pd.read_csv(path/'movie_20mil_dls.csv')#; titles.head()"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "9750d4cb",
+   "id": "5bf8dd55",
    "metadata": {},
    "source": [
     "# Functions for Model Inference"
@@ -281,7 +212,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3f744e7f",
+   "id": "391c0f5b",
    "metadata": {},
    "outputs": [
     {
@@ -377,7 +308,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "eaf30c8f",
+   "id": "450bc8a7",
    "metadata": {},
    "source": [
     "# Gradio For Publishing the Model \n",
@@ -402,7 +333,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4f73ecdd",
+   "id": "19419b7d",
    "metadata": {},
    "source": [
     "# Actually Try the Model HERE\n",
