add changes to movie_rec

--- a/nbs/00_movie_recommender.ipynb
+++ b/nbs/00_movie_recommender.ipynb
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "996b76e7",
+   "id": "7be07258",
    "metadata": {},
    "source": [
     "### Makes sure all your libraries and packages are installed and loaded."
@@ -119,7 +119,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "be5d53f2",
+   "id": "4701256f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -143,7 +143,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b265dd35",
+   "id": "78042c13",
    "metadata": {},
    "source": [
     "# Load model and data loaders or movie title csv\n"
@@ -171,19 +171,37 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "119a35f0",
+   "id": "df5ab960",
    "metadata": {},
    "outputs": [],
    "source": [
     "#| export\n",
     "#load your the model and movie titles with indexes (from the previous data loaders)\n",
-    "learn = load_learner(path/'movie_predictor_large20mil_639.pkl')\n",
-    "titles = pd.read_csv(path/'movie_20mil_dls.csv')#; titles.head()"
+    "learn = load_learner('../models_and_dls/movie_predictor_large20mil_639.pkl')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "76a7f774",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "119a35f0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#| export\n",
+    "titles = pd.read_csv(path/'movie_20mil_dls.csv',low_memory=False)#; titles.head()"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "5bf8dd55",
+   "id": "e5fe6081",
    "metadata": {},
    "source": [
     "# Functions for Model Inference"
@@ -212,7 +230,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "391c0f5b",
+   "id": "e53fdb45",
    "metadata": {},
    "outputs": [
     {
@@ -220,7 +238,7 @@
       "text/markdown": [
        "---\n",
        "\n",
-       "[source](https://github.com/daveramseymusic/movie-recommender/blob/main/movie_recommender/movie_recommender.py#L23){target=\"_blank\" style=\"float:right; font-size:smaller\"}\n",
+       "[source](https://github.com/daveramseymusic/movie-recommender/blob/main/movie_recommender/movie_recommender.py#L25){target=\"_blank\" style=\"float:right; font-size:smaller\"}\n",
        "\n",
        "### get_movie_recs\n",
        "\n",
@@ -237,7 +255,7 @@
       "text/plain": [
        "---\n",
        "\n",
-       "[source](https://github.com/daveramseymusic/movie-recommender/blob/main/movie_recommender/movie_recommender.py#L23){target=\"_blank\" style=\"float:right; font-size:smaller\"}\n",
+       "[source](https://github.com/daveramseymusic/movie-recommender/blob/main/movie_recommender/movie_recommender.py#L25){target=\"_blank\" style=\"float:right; font-size:smaller\"}\n",
        "\n",
        "### get_movie_recs\n",
        "\n",
@@ -308,7 +326,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "450bc8a7",
+   "id": "432e19e8",
    "metadata": {},
    "source": [
     "# Gradio For Publishing the Model \n",
@@ -333,7 +351,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "19419b7d",
+   "id": "ac1dc5c5",
    "metadata": {},
    "source": [
     "# Actually Try the Model HERE\n",
