add learn/titles uploading code and import fastai

--- a/nbs/index.ipynb
+++ b/nbs/index.ipynb
@@ -7,7 +7,8 @@
    "outputs": [],
    "source": [
     "#| hide\n",
-    "from movie_recommender.movie_recommender import *"
+    "from movie_recommender.movie_recommender import *\n",
+    "from fastai.tabular.all import *"
    ]
   },
   {
@@ -54,6 +55,19 @@
    "metadata": {},
    "source": [
     "This lib provides a `get_movie_recs` function to get movie recommendations similar to the movie saved in the `full_title` variable."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#| hide\n",
+    "#load the model and movie titles with indexes (from the previous data loaders)\n",
+    "path = Path('../models_and_dls')\n",
+    "learn = load_learner(path/'movie_predictor_large20mil_639.pkl')\n",
+    "titles = pd.read_csv(path/'movie_20mil_dls.csv')"
    ]
   },
   {
