--- a/nbs/00_movie_recommender.ipynb
+++ b/nbs/00_movie_recommender.ipynb
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7be07258",
+   "id": "f5bc7520",
    "metadata": {},
    "source": [
     "### Makes sure all your libraries and packages are installed and loaded."
@@ -119,7 +119,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4701256f",
+   "id": "5821e9b6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -131,19 +131,8 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "119bb17f",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#| export\n",
-    "path = Path('../models_and_dls')"
-   ]
-  },
-  {
    "cell_type": "markdown",
-   "id": "78042c13",
+   "id": "a0568e38",
    "metadata": {},
    "source": [
     "# Load model and data loaders or movie title csv\n"
@@ -171,37 +160,19 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "df5ab960",
+   "id": "91ab75fc",
    "metadata": {},
    "outputs": [],
    "source": [
-    "#| export\n",
-    "#load your the model and movie titles with indexes (from the previous data loaders)\n",
-    "learn = load_learner('../models_and_dls/movie_predictor_large20mil_639.pkl')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "76a7f774",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "119a35f0",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#| export\n",
-    "titles = pd.read_csv(path/'movie_20mil_dls.csv',low_memory=False)#; titles.head()"
+    "#load the model and movie titles with indexes (from the previous data loaders)\n",
+    "path = Path('../models_and_dls')\n",
+    "learn = load_learner(path/'movie_predictor_large20mil_639.pkl')\n",
+    "titles = pd.read_csv(path/'movie_20mil_dls.csv')"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "e5fe6081",
+   "id": "6fbe7e04",
    "metadata": {},
    "source": [
     "# Functions for Model Inference"
@@ -230,7 +201,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e53fdb45",
+   "id": "00cd158a",
    "metadata": {},
    "outputs": [
     {
@@ -238,7 +209,7 @@
       "text/markdown": [
        "---\n",
        "\n",
-       "[source](https://github.com/daveramseymusic/movie-recommender/blob/main/movie_recommender/movie_recommender.py#L25){target=\"_blank\" style=\"float:right; font-size:smaller\"}\n",
+       "[source](https://github.com/daveramseymusic/movie-recommender/blob/main/movie_recommender/movie_recommender.py#L28){target=\"_blank\" style=\"float:right; font-size:smaller\"}\n",
        "\n",
        "### get_movie_recs\n",
        "\n",
@@ -255,7 +226,7 @@
       "text/plain": [
        "---\n",
        "\n",
-       "[source](https://github.com/daveramseymusic/movie-recommender/blob/main/movie_recommender/movie_recommender.py#L25){target=\"_blank\" style=\"float:right; font-size:smaller\"}\n",
+       "[source](https://github.com/daveramseymusic/movie-recommender/blob/main/movie_recommender/movie_recommender.py#L28){target=\"_blank\" style=\"float:right; font-size:smaller\"}\n",
        "\n",
        "### get_movie_recs\n",
        "\n",
@@ -326,7 +297,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "432e19e8",
+   "id": "cd983eb2",
    "metadata": {},
    "source": [
     "# Gradio For Publishing the Model \n",
@@ -351,7 +322,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ac1dc5c5",
+   "id": "16b5c052",
    "metadata": {},
    "source": [
     "# Actually Try the Model HERE\n",
@@ -472,6 +443,22 @@
     "#| hide\n",
     "import nbdev; nbdev.nbdev_export()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "51631354",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4eb5acd4",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
